<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/goal_input"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:importantForAutofill="no"
        android:ems="10"
        android:hint="@string/input_box_hint"
        android:imeOptions="actionDone"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/contextRadio"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginEnd="2dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/goal_input">

        <RadioButton
            android:id="@+id/homeButton"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_margin="10dp"
            android:background="@drawable/home_context_radio"
            android:button="@null"
            android:paddingLeft="25dp"
            android:text="@string/home"
            android:textSize="30sp" />

        <RadioButton
            android:id="@+id/workButton"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_margin="10dp"
            android:background="@drawable/work_context_radio"
            android:button="@null"
            android:paddingLeft="22dp"
            android:text="@string/work"
            android:textSize="30sp" />

        <RadioButton
            android:id="@+id/schoolButton"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_margin="10dp"
            android:background="@drawable/school_context_radio"
            android:button="@null"
            android:paddingLeft="27dp"
            android:text="@string/school"
            android:textSize="30sp" />

        <RadioButton
            android:id="@+id/errandsButton"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_margin="10dp"
            android:background="@drawable/errands_context_radio"
            android:button="@null"
            android:buttonTint="#DDECD2"
            android:paddingLeft="27dp"
            android:text="@string/errands"
            android:textSize="30sp" />
    </RadioGroup>


    <!--Uses https://www.youtube.com/watch?v=m7TJha6zlN0 as a guide to the buttons-->

</androidx.constraintlayout.widget.ConstraintLayout>