<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/goalInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/input_box_hint"
        android:imeOptions="actionDone"
        android:importantForAutofill="no"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginEnd="2dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/goalInput">

        <RadioButton
            android:id="@+id/homeButton"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_margin="10dp"
            android:background="@drawable/home_context_radio"
            android:button="@null"
            android:paddingLeft="25dp"
            android:text="@string/home"
            android:textSize="30sp" />

        <RadioButton
            android:id="@+id/workButton"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_margin="10dp"
            android:background="@drawable/work_context_radio"
            android:button="@null"
            android:paddingLeft="22dp"
            android:text="@string/work"
            android:textSize="30sp" />

        <RadioButton
            android:id="@+id/schoolButton"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_margin="10dp"
            android:background="@drawable/school_context_radio"
            android:button="@null"
            android:paddingLeft="27dp"
            android:text="@string/school"
            android:textSize="30sp" />

        <RadioButton
            android:id="@+id/errandsButton"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_margin="10dp"
            android:background="@drawable/errands_context_radio"
            android:button="@null"
            android:buttonTint="#DDECD2"
            android:paddingLeft="25dp"
            android:text="@string/errands"
            android:textSize="30sp" />
    </RadioGroup>


    <RadioGroup
        android:id="@+id/recurrenceRadioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="96dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/goalInput">

        <RadioButton
            android:id="@+id/dailyRecurringGoalButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:text="Daily"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>


        <RadioButton
            android:id="@+id/weeklyRecurringGoalButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:text="Weekly"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dailyRecurringGoalButton" />

        <RadioButton
            android:id="@+id/monthlyRecurringGoalButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:text="Monthly"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/weeklyRecurringGoalButton" />

        <RadioButton
            android:id="@+id/yearlyRecurringGoalButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:text="Yearly"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/monthlyRecurringGoalButton" />

        <TextView
            android:id="@+id/startingDateTextView"
            android:layout_width="85dp"
            android:layout_height="32dp"
            android:text="Starting:"
            android:textSize="18sp"
            android:textStyle="bold" />

    </RadioGroup>

    <EditText
        android:id="@+id/recurringDatePicker"
        android:layout_width="149dp"
        android:layout_height="51dp"
        android:ems="10"
        android:hint="@string/date_box_hint"
        android:imeOptions="actionDone"
        android:importantForAutofill="no"
        android:inputType="date"
        android:textAlignment="center"
        android:textIsSelectable="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recurrenceRadioGroup" />


    <!--Uses https://www.youtube.com/watch?v=m7TJha6zlN0 as a guide to the buttons-->

</androidx.constraintlayout.widget.ConstraintLayout>